# rust_web_task

./: Cargo.toml  README.md  config.json  db.sh
src/: config.rs  lib.rs  main.rs
src/controller/: group_controller.rs  mod.rs  user_controller.rs
src/dao/: db_context.rs  group_dao.rs  user_dao.rs  user_to_group_dao.rs
src/model/: group.rs  user.rs
tests/: ftest  test.rs  tests.sh
tests/dao_test/: db_context_test.rs  user_to_group_dao_test.rs
