[package]
name = "sqlx_user_crud"
version = "0.1.0"
authors = ["Mohammad Alashqar"]
edition = "2021"


[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
sqlx = { version = "0.3.5", features = ["sqlite"] }
serde = "1.0.117"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

